# test_ai

./: CMakeLists.txt  architecture.md  build.sh
include/: box_coord.h  box_effect.h  dot_circle_effect.h  effect.h  effect_factory.h  image_overlay_effect.h  light_band_effect.h  renderer.h
src/: box_effect.cpp  dot_circle_effect.cpp  effect_factory.cpp  image_overlay_effect.cpp  light_band_effect.cpp  main.cpp  renderer.cpp
